[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="host" type="Button" parent="."]
margin_left = 412.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 400.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 412.0
margin_top = 500.0
margin_right = 612.0
margin_bottom = 600.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="LineEdit" parent="."]
margin_left = 262.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 124.0
placeholder_text = "Ip Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_IP" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
